--- a/projet/nbproject/project.properties
+++ b/projet/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.19.jar=../mysql-connector-java-8.0.19/mysql-connector-java-8.0.19.jar
+file.reference.rs2xml.jar=../rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.19.jar}
+    ${file.reference.mysql-connector-java-8.0.19.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
