--- a/Projet Josia/PjBdd/nbproject/private/private.properties
+++ b/Projet Josia/PjBdd/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.Jcalen-lib=C:\\Users\\josia\\Documents\\NetBeansProjects\\last_version\\PjBdd\\jcalendar-1.4\\lib
-file.reference.jcalendar-1.4.jar=C:\\Users\\josia\\Documents\\NetBeansProjects\\last_version\\PjBdd\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\josia\\Documents\\NetBeansProjects\\last_version\\PjBdd\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
+file.reference.Jcalen-lib=C:\\Users\\josia\\Documents\\NetBeansProjects\\new_version\\PjBdd\\jcalendar-1.4\\lib
+file.reference.jcalendar-1.4.jar=C:\\Users\\josia\\Documents\\NetBeansProjects\\new_version\\PjBdd\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\josia\\Documents\\NetBeansProjects\\new_version\\PjBdd\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 user.properties.file=C:\\Users\\josia\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
