--- a/Projet Josia/PjBdd/nbproject/project.properties
+++ b/Projet Josia/PjBdd/nbproject/project.properties
@@ -35,17 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/PjBdd
 excludes=
 file.reference.Jcalen-lib=C:\\Users\\alexa\\Desktop\\Studies\\Semester 6\\Java\\Jcalen\\lib
 file.reference.jcalendar-1.4.jar=C:\\Users\\alexa\\Desktop\\Studies\\Semester 6\\Java\\Jcalen\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\alexa\\Desktop\\Studies\\Semester 6\\BaseDeDonnees\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
-file.reference.mysql-connector-java-8.0.19.jar-1=C:\\Users\\josia\\Documents\\NetBeansProjects\\Projet\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.19.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.Jcalen-lib}:\
-    ${file.reference.mysql-connector-java-8.0.19.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.Jcalen-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
